@@ -435,7 +435,7 @@ public class RepositoryDistributionSnapshot extends BaseNuxeoArtifactDocAdapter 
             SnapshotFilter refFilter = null;
             if (filter != null && filter.getReferenceClass() != null) {
                 // resolve bundle selection to get reference filter
-                var selectedBundles = new ArrayList<NuxeoArtifact>();
+                List<NuxeoArtifact> selectedBundles = new ArrayList<NuxeoArtifact>();
                 getBundles().stream().filter(filter::accept).forEach(selectedBundles::add);
                 try {
                     Constructor<? extends SnapshotFilter> constructor = filter.getReferenceClass()
@@ -498,12 +498,12 @@ public class RepositoryDistributionSnapshot extends BaseNuxeoArtifactDocAdapter 
      */
     public Map<String, String> getUpdateProperties() {
         Map<String, String> props = new HashMap<>();
-        List.of(TITLE_PROPERTY_PATH, PROP_NAME, PROP_VERSION, PROP_KEY).forEach(p -> props.put(p, safeGet(p)));
+        Arrays.asList(TITLE_PROPERTY_PATH, PROP_NAME, PROP_VERSION, PROP_KEY).forEach(p -> props.put(p, safeGet(p)));
         if (StringUtils.isBlank(props.get(TITLE_PROPERTY_PATH))) {
             props.put(TITLE_PROPERTY_PATH, props.get(PROP_NAME));
         }
-        List.of(PROP_LATEST_LTS, PROP_LATEST_FT, PROP_HIDE)
-            .forEach(p -> props.put(p, String.valueOf(doc.getPropertyValue(p))));
+        Arrays.asList(PROP_LATEST_LTS, PROP_LATEST_FT, PROP_HIDE)
+              .forEach(p -> props.put(p, String.valueOf(doc.getPropertyValue(p))));
         Date releaseDate = getReleaseDate();
         props.put(PROP_RELEASED, releaseDate == null ? null : new SimpleDateFormat("yyyy-MM-dd").format(releaseDate));
         List<String> aliases = safeGet(PROP_ALIASES);
@@ -526,8 +526,8 @@ public class RepositoryDistributionSnapshot extends BaseNuxeoArtifactDocAdapter 
             if (StringUtils.isBlank(props.get(TITLE_PROPERTY_PATH))) {
                 props.put(TITLE_PROPERTY_PATH, props.get(PROP_NAME));
             }
-            List.of(PROP_LATEST_LTS, PROP_LATEST_FT, PROP_HIDE)
-                .forEach(p -> props.put(p, Boolean.toString(formFields.containsKey(p))));
+            Arrays.asList(PROP_LATEST_LTS, PROP_LATEST_FT, PROP_HIDE)
+                  .forEach(p -> props.put(p, Boolean.toString(formFields.containsKey(p))));
         }
         return props;
     }
@@ -563,8 +563,8 @@ public class RepositoryDistributionSnapshot extends BaseNuxeoArtifactDocAdapter 
         Stream.of(TITLE_PROPERTY_PATH, PROP_NAME, PROP_VERSION, PROP_KEY, PROP_LATEST_LTS, PROP_LATEST_FT, PROP_HIDE)
               .filter(updateProperties::containsKey)
               .forEach(p -> doc.setPropertyValue(p, updateProperties.get(p)));
-        List.of(PROP_LATEST_LTS, PROP_LATEST_FT, PROP_HIDE)
-            .forEach(p -> doc.setPropertyValue(p, updateProperties.get(p)));
+        Arrays.asList(PROP_LATEST_LTS, PROP_LATEST_FT, PROP_HIDE)
+              .forEach(p -> doc.setPropertyValue(p, updateProperties.get(p)));
         if (updateProperties.containsKey(PROP_RELEASED)) {
             doc.setPropertyValue(DistributionSnapshot.PROP_RELEASED, convertDate(updateProperties.get(PROP_RELEASED)));
         }
@@ -581,7 +581,7 @@ public class RepositoryDistributionSnapshot extends BaseNuxeoArtifactDocAdapter 
     }
 
     protected void validateKeyOrAlias(String keyOrAlias, List<String> reservedKeys) throws DocumentValidationException {
-        var forbidden = new ArrayList<>(List.of(
+        List<String> forbidden = new ArrayList<>(Arrays.asList(
                 // reserved for live distrib
                 SnapshotManager.DISTRIBUTION_ALIAS_CURRENT, SnapshotManager.DISTRIBUTION_ALIAS_ADM,
                 // added automatically
