@@ -104,7 +104,7 @@ public class ApiBrowser extends DefaultObject {
         String viewId = "index";
         DistributionSnapshot snap = getSnapshotManager().getSnapshot(distributionId, ctx.getCoreSession());
         List<String> bundleIds = snap.getBundleIds();
-        var stats = new HashMap<String, Integer>();
+        Map<String, Integer> stats = new HashMap<String, Integer>();
         stats.put("bundles", bundleIds.size());
         stats.put("components", snap.getComponentIds().size());
         stats.put("services", snap.getServiceIds().size());
@@ -555,7 +555,7 @@ public class ApiBrowser extends DefaultObject {
         // init potential resources depending on request
         sm.initWebContext(getContext().getRequest());
 
-        Map<String, String> props = Boolean.TRUE.equals(pretty) ? Map.of("pretty", "true") : null;
+        Map<String, String> props = Boolean.TRUE.equals(pretty) ? Collections.singletonMap("pretty", "true") : null;
         SnapshotFilter filter = getSnapshotFilter(bundles, nuxeoPackages, javaPackagePrefixes, checkAsPrefixes,
                 includeReferences);
         Exporter exporter = sm.getExporter(exporterName);
@@ -596,7 +596,7 @@ public class ApiBrowser extends DefaultObject {
     }
 
     protected List<String> getSnapshotFilterCriterion(List<String> queryParam) {
-        var res = new ArrayList<String>();
+        List<String> res = new ArrayList<String>();
         if (queryParam != null) {
             queryParam.stream().filter(StringUtils::isNotBlank).forEach(res::add);
         }
