@@ -28,6 +28,7 @@ import java.io.Serializable;
 import java.io.StringWriter;
 import java.text.ParseException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -145,7 +146,7 @@ public class Distribution extends ModuleRoot {
      *
      * @since 20.0.0
      */
-    protected static final List<String> SUB_DISTRIBUTION_PATH_RESERVED = List.of(VIEW_ADMIN, SAVE_ACTION,
+    protected static final List<String> SUB_DISTRIBUTION_PATH_RESERVED = Arrays.asList(VIEW_ADMIN, SAVE_ACTION,
             SAVE_EXTENDED_ACTION, DOWNLOAD_ACTION, UPDATE_ACTION, DO_UPDATE_ACTION, DELETE_ACTION, UPLOAD_ACTION,
             UPLOAD_TMP_ACTION, UPLOAD_TMP_VALID_ACTION, REINDEX_ACTION);
 
@@ -615,7 +616,7 @@ public class Distribution extends ModuleRoot {
         }
         // will trigger retrieval of distribution again
         return redirect(URIUtils.addParametersToURIQuery(String.format("%s/%s", getPath(), VIEW_ADMIN),
-                Map.of(ApiBrowserConstants.SUCCESS_FEEBACK_MESSAGE_VARIABLE, "Update Done.")));
+                Collections.singletonMap(ApiBrowserConstants.SUCCESS_FEEBACK_MESSAGE_VARIABLE, "Update Done.")));
     }
 
     /**
@@ -741,7 +742,7 @@ public class Distribution extends ModuleRoot {
 
         // will trigger retrieval of distributions again
         return redirect(URIUtils.addParametersToURIQuery(String.format("%s/%s", getPath(), VIEW_ADMIN),
-                Map.of(ApiBrowserConstants.SUCCESS_FEEBACK_MESSAGE_VARIABLE, "Deletion Done.")));
+                Collections.singletonMap(ApiBrowserConstants.SUCCESS_FEEBACK_MESSAGE_VARIABLE, "Deletion Done.")));
     }
 
 }
